--- a/02jjfa/方案1.md
+++ b/02jjfa/方案1.md
@@ -8,7 +8,7 @@
     - 标线
     - 信号灯
 2. 维修车辆的监控
-    - 出车，随车gps每个1秒-60秒把位置发送服务器
+    - 出车，随车gps设备每间隔1秒-60秒把位置发送服务器
     - 管理系统可地图中查看车辆定位
     - 管理系统可地图中绘制行驶轨
 3. 数据统计分析和报表，举例：
