--- a/01xqgs/需求概述.md
+++ b/01xqgs/需求概述.md
@@ -11,17 +11,18 @@
 
 2. 软件部分：
     - 《交通设施巡检管理系统》
-    -  ~~《交通设施巡检APP》~~
+    - 《交通设施巡检APP》
 
 3. 主要系统角色：
     - 系统管理员
     - 软件开发管理员
     - 公司文员（一些非维修人员录入信息之外的数据维护）
     - 设施维修人员
-    - 内部账号（特定的账号或者一个网络地址）
+    - 其他角色待定（可灵活配置）...
 
 
 <br/>
   > 说明：
+  > 1. 角色就是一组功能的合集，并起了一个名字，某人设置了这个（可以设置多个）角色，则就拥有了这些功能访问的权限
   > 1. 角色和权限的维护：系统管理员可以增加和修改其他角色，并设置相关可访问菜单和按钮，然后分配给某些用户即可
   > 2. 系统账号，由系统管理员统一分配。个人账号的密码，在分配后可以自己修改。
