--- a/03wthjy/问题和技术难点.md
+++ b/03wthjy/问题和技术难点.md
@@ -12,3 +12,10 @@
 
 ### 3. 流程梳理、表单梳理、报表设计，等信息交流问题
   - 需求提出方和软件制作方，需在项目开工编码钱，建立密切沟通、快速沟通的方式，才有助于软件的成功。
+
+### 4. APP的界面设计
+  - 设计在考虑成本的同时，需达到界面美观、简洁，功能划分合理、界面布局合理、操作边界等。
+
+### 5. 原生APP的开发
+  - 因采用最先件的Flutter技术开发，技术上有一定难度
+  - APP开发人员招聘成本、APP开发人员培训比较高
