--- a/04ssjdhyw/实施阶段和运维.md
+++ b/04ssjdhyw/实施阶段和运维.md
@@ -5,7 +5,7 @@
 阶段序号     | 主要任务
 :------- | :--------------------
 - [✔︎] 1  | 需求调研，提供技术方案
-- [ ] 2  | 报价，签订开发合同、付设计款
+- [] 2  | 报价，签订开发合同、付设计款
 - [ ] 3  | 确定需求细节，编写详细设计文档
 - [ ] 4  | 框架设计、架构设计
 - [ ] 5  | 开发环境配置、测试环境搭建、编码规范
@@ -20,5 +20,5 @@
 
 
 ## 2. 运维
-
-需协商签订运维合同。年运维费用一般为合同额的15%之间。
+系统自上线之日起，12个月内提供免费技术维护服务。免费无维护服务期满后，需协商签订运维合同。
+年运维费用一般为合同额的15%之间。
