--- a/02jjfa/方案1.md
+++ b/02jjfa/方案1.md
@@ -1,8 +1,8 @@
-# 1. 技术方案1
+##  解决方案1
 
 方案一是交通巡检管理系统的解决方案，仅包括pc端，不包括APP端。
 
-## 一、 主要模块和功能：
+### 一、 主要模块和功能：
 1. 设施维修人员，每天维修的数据，自己录入系统，包括
     - 护栏
     - 标线
@@ -10,7 +10,7 @@
 2. 维修车辆的监控
     - 出车，随车gps设备每间隔1秒-60秒把位置发送服务器
     - 管理系统可地图中查看车辆定位
-    - 管理系统可地图中绘制行驶轨
+    - 管理系统可地图中查看车辆行驶轨迹
 3. 数据统计分析和报表，举例：
     - 月出车的车次统计
     - 月出车总时间统计
@@ -26,8 +26,8 @@
 
 > 注：详细的模块功能设计和UI设计，在签订合同付设计款项后才能设计和制作，见：[实施阶段和运维](/04ssjdhyw/实施阶段和运维.md)。
 
-## 二、 后台服务端技术方案
-### 1.1. 后台项目主要采用技术：
+### 二、 后台服务端技术方案
+#### 1.1. 后台项目主要采用技术：
 - 核心框架：springcloud 全家桶
 - 安全框架：Spring Cloud Oauth2、Spring Security
 - 分布式任务调度框架：elastic-job
@@ -36,7 +36,7 @@
 - 日志管理：Logback
 - 三方服务： 短信、支付等
 
-### 1.2. 后台项目结构规划：
+#### 1.2. 后台项目结构规划：
 ```
   ├─villealife-master----------------------------父项目，公共依赖
   │  │
@@ -110,7 +110,7 @@
 <br/>
 <br/>
 
-### 2.1. 后台的前端主要采用技术：
+#### 2.1. 后台的前端主要采用技术：
 | 技术名称                                                                                          | 作用                  
 | --------                                                                                          | -----:          
 | [Nodejs](https://nodejs.org/en/)                                                                    | 运行引擎
@@ -127,7 +127,7 @@
 | [Google Material-Icons](https://material.io/icons/)                                               | 图标字体            
 
 
-### 2.2. 后台的前端项目结构规划：
+#### 2.2. 后台的前端项目结构规划：
 ```
 ├── README.md                       项目介绍            
 ├── .electron-vue                       构建脚本目录
