--- a/05bj/方案2报价.md
+++ b/05bj/方案2报价.md
@@ -1,8 +1,8 @@
-# 2. 方案2报价
+## 方案2报价
 
-## 收费项目
+### 收费项目
 
-### 一、苹果企业开发者账号申请工作内容：
+#### 一、苹果企业开发者账号申请工作内容：
 1.	每年固定上交苹果费用： 99美元（按当前汇率计算）
 
 2.	第一次申请苹果企业开发者账号人工费用
@@ -11,7 +11,7 @@
 
 申请账号时间为5个工作日。
 
-### 二、APP上架的工作内容：
+#### 二、APP上架的工作内容：
 1. app上架App Store
 上架审核周期：5个工作日
 
@@ -24,13 +24,13 @@
     - 百度开发者平台
     - 91手机助手开发者平台
 
-### 三、软件开发收费内容：
+#### 三、软件开发收费内容：
 1.	管理后台 (此费用包括在方案1中)
 2.	派单员端APP（安卓、苹果）
 3.	维修员段APP（安卓、苹果）
 4.	产品设计和12个月免费维护
 
-## 费用构成汇总表：
+### 费用构成汇总表：
 具体需求待定，根据工作量和技术难度，开发公司付出的代价不同则报价也不同，价格只是预计价格：
 
 |  序号 |  构成 | 费用 |
