去掉公司信息：青岛前途软件

--- a/02jjfa/方案1.md
+++ b/02jjfa/方案1.md
@@ -195,4 +195,4 @@
 <br/>
 
 > 如果界面是一个软件的皮囊，那后台就是这个软件的灵魂。
-前途软件将采用海尔、海信在广泛使用的微服务、前后端分离架构，为您搭建高可维护、高负载、高性能的服务端和管理软件。
+我公司将采用海尔、海信在广泛使用的微服务、前后端分离架构，为您搭建高可维护、高负载、高性能的服务端和管理软件。
