去掉公司信息

--- a/01xqgs/需求概述.md
+++ b/01xqgs/需求概述.md
@@ -2,12 +2,13 @@
 
 
 
-**需求背:**
-甲方公司作为交通设施维修公司，需要上线一款软件，达到统一管理公司日常办公、巡检、维修过程中产生数据，以及巡检轨迹等数据，最终产出一系列的统计数据报表、图表，并提交给相关部门使用。
+**关于需求背景:**
+应济南市交通设施运维需求，需要尽快上线一款运维软件，达到统一管理运维日常、巡检、维修过程中产生的数据及图片、影像资料，以及巡检轨迹等数据。最终产出一系列的统计数据报表、图表，及综合数据信息。并提交相关部门使用。
 
+<hr/>
 
 1. 硬件部分：
-    gps定位和车辆行驶轨迹的显示，需要采购gps硬件，进行二次开发来实现。
+    gps定位和车辆行驶轨迹的显示，需要采购gps硬件或接入已有GPS接口。
 
 2. 软件部分：
     - 《交通设施巡检管理系统》
@@ -17,9 +18,8 @@
     - 系统管理员
     - 软件开发管理员
     - 公司文员（一些非维修人员录入信息之外的数据维护）
-    - 设施维修人员
+    - 设施维人员
     - 其他角色待定（可灵活配置）...
-
 
 <br/>
   > 说明：
