--- a/02jjfa/方案1.md
+++ b/02jjfa/方案1.md
@@ -3,25 +3,31 @@
 方案一是交通巡检管理系统的解决方案，仅包括pc端，不包括APP端。
 
 ### 一、 主要模块和功能：
-1. 设施维修人员，每天维修的数据，自己录入系统，包括
+1. 设施维修人员，每天维修的数据，自己录入系统，包括:
     - 护栏
-    - 标线
-    - 信号灯
-2. 维修车辆的监控
+    - 标志
+    
+   > 后续可增加模块和属性
+
+2. 维保数据的统计分析，支持全文和关键词检索：
+    - 月道路设施维护信息分析
+    - 月道路撞损设施信息分析
+    - 月巡检维护设施信息分析
+    - 现有交通设施的信息建立与档案管理
+    - ...
+
+3. 维修车辆的监控
     - 出车，随车gps设备每间隔1秒-60秒把位置发送服务器
     - 管理系统可地图中查看车辆定位
     - 管理系统可地图中查看车辆行驶轨迹
-3. 数据统计分析和报表，举例：
-    - 月出车的车次统计
-    - 月出车总时间统计
-    - 月出车平均时长统计
-    - 出车记录报表（并可按个维度分组统计）
-    - ...
+    
 4. 其他模块
     - 基础数据维护（地区、故障类型等）
     - 用户管理
     - 菜单管理
+    - 角色管理
     - 权限管理
+    - 机构管理
     - ...
 
 > 注：详细的模块功能设计和UI设计，在签订合同付设计款项后才能设计和制作，见：[实施阶段和运维](/04ssjdhyw/实施阶段和运维.md)。
